--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
   <body>
     <%= yield %>
     <% if Rails.env.production? %>
-      <%= stylesheet_link_tag "index", "data-turbo-track": "reload" %>
-      <%= javascript_include_tag "index", "data-turbo-track": "reload"  %>
+      <%= stylesheet_link_tag "main", "data-turbo-track": "reload" %>
+      <%= javascript_include_tag "main", "data-turbo-track": "reload"  %>
     <% end %>
   </body>
 </html>
